--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
   <title>What Time is It?</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="currentTime">
+      <span id="time"></span>
+    </div>
+  </div>
 </body>
 </html>
