--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
   <title>What Time is It?</title>
 
   <link rel="stylesheet" href="style.css">
-  <script src='arquivo.js' type='text/javascript'></script>
+  <script src='script.js' type='text/javascript'></script>
 
 </head>
 <body>
